--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 MONGO_URL=mongodb+srv://prakhar:prakhar@zomatomaster.8qlfofu.mongodb.net/zomato?retryWrites=true&w=majority
+GOOGLE_CLIENT_ID=164029020379-1rpip1bmju0hgbbkdrmekvrk260uhc6l.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
